# docs/openapi.yaml
@@ -46,9 +46,9 @@ paths:
             application/json:
               schema:
                 type: string
-                example: "Доступные команды: /add, /most_expensive_category, /most_expensive_purchase"
+                example: "Доступные команды: /expenses/add, /expenses/most_expensive_category, /expenses/most_expensive_purchase"
 
-  /add:
+  /expenses/add:
     post:
       summary: Добавить новый расход
       description: Добавляет запись о новом расходе в систему
@@ -80,7 +80,7 @@ paths:
                     type: string
 
 
-  /most_expensive_category/{date}:
+  /expenses/most_expensive_category/{date}:
     get:
       summary: Самая затратная категория
       description: Возвращает категорию с наибольшими расходами за указанную дату
@@ -110,7 +110,7 @@ paths:
                     msg: string
                     type: string
 
-  /most_expensive_purchase/{category}/{date}:
+  /expenses/most_expensive_purchase/{category}/{date}:
     get:
       summary: Самая дорогая покупка
       description: Возвращает самую дорогую покупку в указанной категории за дату
